[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/structures/chests/GChest.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/structures/chests/drop_chest/DropChest.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.62339, 6.28144 )

[sub_resource type="RectangleShape2D" id=2]

[node name="NormalChest" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )
capacity = 8

[node name="ChestBody" parent="." index="1"]
editor/display_folded = true

[node name="CollisionShape2D" parent="ChestBody" index="0"]
position = Vector2( -0.421116, 0.322904 )
shape = SubResource( 1 )

[node name="InteracArea" parent="." index="3"]
editor/display_folded = true
visible = false

[node name="InteractCollision" parent="InteracArea" index="0"]
shape = SubResource( 2 )

[node name="TimerDrop" type="Timer" parent="." index="4"]
wait_time = 0.19
one_shot = true

[connection signal="animation_finished" from="AnimationChest" to="." method="_on_AnimationChest_animation_finished"]
[connection signal="body_entered" from="InteracArea" to="." method="_on_InteracArea_body_entered"]
[connection signal="body_exited" from="InteracArea" to="." method="_on_InteracArea_body_exited"]
[connection signal="timeout" from="TimerDrop" to="." method="_on_TimerDrop_timeout"]
